--- a/admin/template/js/ckeditor/skins/getsimple/editor.css
+++ b/admin/template/js/ckeditor/skins/getsimple/editor.css
@@ -7,7 +7,7 @@ For licensing,  see LICENSE.html or http://ckeditor.com/license
 	margin:0;
 	padding:0;
 	border:0;
-	background:#FFF;
+	background:transparent;
 	text-decoration:none;
 	font:normal normal normal 100% Sans-Serif;
 	width:auto;
